Bug 161210 - some xls files take too much time to open in LO 7 and newer [LO 6 is ok]
Summary: some xls files take too much time to open in LO 7 and newer [LO 6 is ok]
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.2.3.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:25.2.0 inRelease...
Keywords: perf
Depends on:
Blocks:
 
Reported: 2024-05-22 08:09 UTC by Serge
Modified: 2025-04-22 08:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example of slow opening xls (3.76 MB, application/vnd.ms-excel)
2024-05-22 08:11 UTC, Serge
Details
Sampled file cleaned. (458.00 KB, application/vnd.ms-excel)
2024-05-22 23:44 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Serge 2024-05-22 08:09:51 UTC
Description:
Our company have been using libre office for many years. 
When we had LO 6 everything was ok 
Now after upgrading to a newer version of linux distro  we encounter a problem with LO 7 and newer versions. 
Some files take too much time to open.
Here is the example:
I tried to open our company phonebook with different versions of LO on the same workstation.
Here is the results:
LO 6.4.7.2  - 5 sec
LO 7.6.6.3 -  3 min 45 sec
LO 24.2  - 40 sec

Well 40 sec is better then 3 minutes but still it is  very annoying delay.

Can this issue be fixed?

I attached phonebook example — our_phonebook.xls

Steps to Reproduce:
Open attached file our_phonebook.xls 

Actual Results:
LO7  and newer are very slow to open this file
LO6  is ok

Expected Results:
LO7 and 24.2 be as fast as LO6


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.2.3.2 (X86_64) / LibreOffice Community
Build ID: 433d9c2ded56988e8a90e6b2e771ee4e6a5ab2ba
CPU threads: 12; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Serge 2024-05-22 08:11:50 UTC
Created attachment 194266 [details]
Example of slow opening xls
Comment 2 ady 2024-05-22 09:12:19 UTC
Normally, you should not set your own reports to NEW. I reproduce the additional delay, so I'm leaving it as NEW in this case.

Noel recently dealt with some performance improvements regarding conditional format in XLS files.

IDK what exactly makes this file load slower than in 6.x versions; there are several possible factors.
Comment 3 m_a_riosv 2024-05-22 23:44:56 UTC
Created attachment 194282 [details]
Sampled file cleaned.

Cleaning of direct format, columns and rows beyond last data, then open normally.

Maybe some format was done after selecting the whole sheets.

Also after data there are columns with merged cells.
Comment 4 Commit Notification 2024-05-24 16:29:28 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/397d7af2cbb1f2786ba857d350fb4641525e3bb2

tdf#161210 speedup loading large XLS

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-05-24 18:11:45 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/137f423cc18e23f64b3b2bc6075c5f1581ac6537

tdf#161210 speedup loading large XLS (2)

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-25 08:18:44 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bdc8d3dec0beb167c40e6d0eea02c3b401e5117d

tdf#161210 speed up XLS load

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-06-25 09:54:00 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2d208c4e42595bb85fd0ef726a89e10dd32b48b1

tdf#161210 speed xls load

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.