tdf#161210 speedup loading large XLS

takes the time from 22s to 20s for me

Change-Id: Ib401c03ba13f82047c8376741e3547aadf5b18df
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168011
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>